# clam

./: .clang-format  .gitignore  LICENCE  Makefile  README.md  compile_commands.json  example.txt  flake.nix  meson.build  parse.txt  run.sh
.cache/clangd/index/: ast.c.6BBCA15FA716023B.idx  ast.h.1039D5D985D24687.idx  common.c.238FA51D5F5040A4.idx  common.h.93C544A5FB8E7BA9.idx  lexer.c.F502355610683AF1.idx  lexer.h.8B957438CBF379A9.idx  main.c.46119C2FAD60D8C2.idx  memory.c.462F2DCCF8CEC2FF.idx  memory.h.F02BF7A6803AC448.idx  parser.c.8AB911DB94E7204D.idx  parser.h.251B82714552D494.idx  result.h.138208961548207E.idx  vec.h.C3BD37530629525C.idx
src/: #compiler.h#  ast.c  ast.h  common.c  common.h  compiler.c  compiler.h  hashtable.c  hashtable.h  hashtable.h~  lexer.c  lexer.h  lexer.old.c  main.c  maybe.h  memory.c  memory.h  parser.c  parser.h  result.h  string.c  string.h  vec.h  vm.c  vm.h
